update sign in and sign up spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
     height: 100%;
 }
 .stretch-container{
-    height: 90vh;
+    height: 82vh;
 }
 .script-name{
     font-size: 1.25rem;
